--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,15 +3,16 @@
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Recipe Book</a>
         </div>
+
         <div class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
-                <li href="#">Recipes</li>
-                <li href="#">Shopping List</li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#">Recipes</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" role="button">Manage</a>
-                    <ul class="dropdown">
+                    <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
                         <li><a href="#">Fetch Data</a></li>
                     </ul>
