--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
         <div class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Recipes</a></li>
+                <li><a (click)="showFeature('recipe')" href="#">Recipes</a></li>
+                <li><a (click)="showFeature('shopping-list')" href="#">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
